change class name of tag buttons

--- a/app.html
+++ b/app.html
@@ -45,7 +45,7 @@
             <i class="fa fa-search"></i>
           </button>
         </div>
-        <div class="btn-group">
+        <div class="tag-group">
             <button id="plus-btn">+</button>
             <button>#school</li>
             <button>#work</li>
