add id to the for attribute of label tag

--- a/app.html
+++ b/app.html
@@ -65,16 +65,16 @@
               </p>
               <div class="checkbox-list">
                 <div>
-                  <input type="checkbox" />
-                  <label for="">Click on "Add new item"</label>
+                  <label for="add-new">Click on "Add new item"</label>
+                  <input type="checkbox" id="add-new" />
                 </div>
                 <div>
-                  <input type="checkbox" />
-                  <label for="">Fill out the information</label>
+                  <label for="fill-form">Fill out the information</label>
+                  <input type="checkbox" id="fill-form"/>
                 </div>
                 <div>
-                  <input type="checkbox" />
-                  <label for="">Done</label>
+                  <label for="done">Done</label>
+                  <input type="checkbox" id="done" />
                 </div>
               </div>
             <!-- </div>  -->
