Added text to the about page for the images.
Added text to the about page for the images.

--- a/about.html
+++ b/about.html
@@ -47,15 +47,15 @@
 
     <!--Portfolio Images-->
     <div>
-        <img class="person1" href=""/>
-        <img class="person2" href=""/>
-        <img class="person3" href=""/>
+        <img class="Imagegroup1" id="HenokGebeyehu" href=""/>
+        <img class="Imagegroup1" id="HenryRosales" href=""/>
+        <img class="Imagegroup1" id="LVNereus" href=""/>
     </div>
 
     <div>
-        <img class="NiaraJohnson" href="./assets/images/NiaraJohnson.png"/>
-        <img class="person5" href=""/>
-        <img class="person6" href=""/>
+        <img class="Imagegroup2" id="NiaraJohnson" href="./assets/images/NiaraJohnson.png"/>
+        <img class="Imagegroup2" id="ThanhPham" href=""/>
+        <img class="Imagegroup2" id="ZainabIbrahim" href=""/>
     </div>
     
 </body>
