Make Slight CSS changes
You guys saw me make these changes

--- a/about.html
+++ b/about.html
@@ -13,21 +13,20 @@
     <!--Emoji Link-->
     <script src="https://kit.fontawesome.com/27eb42d559.js" crossorigin="anonymous"></script>
 
+    <link href="assets/css/style.css" rel="stylesheet">
+
     <title>Simplist | About</title>
 
 
 </head>
 <body>
-    <nav>
-        <div id="logo">
-            <h1>Simplist</h1>
-        </div>
-
+    <nav class="header">
+        <h1>Simplist</h1>
         <ul>
-            <li><a href="#">App</a></li>
-            <li><a href="#">About</a></li>
+          <li><a href="#">App</a></li>
+          <li><a href="#">About</a></li>
         </ul>
-    </nav>
+      </nav>
     <main>
         <div class="header">
             <img class="Larrows" src="assets/images/Arrows.png">
