--- a/index.html
+++ b/index.html
@@ -11,33 +11,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
         <!-- Styling -->
-        <link rel="stylesheet" src="style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
 
 
     <title>Simplist</title>
 </head>
 <body>
     <!--Nav bar-->
-    <nav>
+    <nav class="header">
+        <h1>Simplist</h1>
         <ul>
-            <li>
-                <a href="#blank">
-                    Simplist
-                </a>
-            </li>
-            <li>
-                App
-            </li>
-            <li>
-                About
-            </li>
+          <li><a href="#">App</a></li>
+          <li><a href="#">About</a></li>
         </ul>
-    </nav>
+      </nav>
 
         <!--Brand name & tagline-->
-        <h1>
+        <h2>
             Simplist
-        </h1>
+        </h2>
         <h4>
             A better <u>todo</u> list
         </h4>
