Images in progress.
Images in progress.

--- a/about.html
+++ b/about.html
@@ -48,8 +48,8 @@
     <!--Portfolio Images-->
     <div>
         <img class="Imagegroup1" id="HenokGebeyehu" href=""/>
-        <img class="Imagegroup1" id="HenryRosales" href=""/>
-        <img class="Imagegroup1" id="LVNereus" href=""/>
+        <img class="Imagegroup1" id="HenryRosales" href="./assets/images/HenryRosales.png"/>
+        <img class="Imagegroup1" id="LVNereus" href="./assets/images/LVNereus.png"/>
     </div>
 
     <div>
