Add class to button
Added class to button

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!--Button-->
 
-        <button onclick="">
+        <button onclick="" class="simplist-button">
             Make things Simplier
     
         </button>
