Add tagline class
Added class to tagline

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Simplist
         </h2>
         <br>
-        <h4>
+        <h4 class="tagline">
             A better <u>todo</u> list
         </h4>
 
