Adding names for images.
Adding names for images.

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 
     <!--  Links for Grotesque Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https:/@/fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!--Emoji Link-->
@@ -49,12 +49,18 @@
         <img class="Imagegroup1" id="HenokGebeyehu" href=""/>
         <img class="Imagegroup1" id="HenryRosales" href="./assets/images/HenryRosales.png"/>
         <img class="Imagegroup1" id="LVNereus" href="./assets/images/LVNereus.png"/>
+        <a>Henok Gebeyehu</a>
+        <a>Henry Rosales</a>
+        <a>LV Nereus</a>
     </div>
 
     <div>
         <img class="Imagegroup2" id="NiaraJohnson" href="./assets/images/NiaraJohnson.png"/>
         <img class="Imagegroup2" id="ThanhPham" href=""/>
         <img class="Imagegroup2" id="ZainabIbrahim" href=""/>
+        <a></a>
+        <a></a>
+        <a></a>
     </div>
     
 </body>
