Added names to group images
Added names to group images

--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@
         <img class="Imagegroup2" id="NiaraJohnson" href="./assets/images/NiaraJohnson.png"/>
         <img class="Imagegroup2" id="ThanhPham" href=""/>
         <img class="Imagegroup2" id="ZainabIbrahim" href=""/>
-        <a></a>
-        <a></a>
-        <a></a>
+        <a>Niara Johnson</a>
+        <a>Thanh Pham</a>
+        <a>Zainab Ibrahim</a>
     </div>
     
 </body>
