Updated @ symbol on line ten.
Updated @ symbol on line ten.

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 
     <!--  Links for Grotesque Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https:/@/fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!--Emoji Link-->
@@ -62,9 +62,6 @@
         <img class="Imagegroup2" id="NiaraJohnson" href="./assets/images/NiaraJohnson.png"/>
         <img class="Imagegroup2" id="ThanhPham" href=""/>
         <img class="Imagegroup2" id="ZainabIbrahim" href=""/>
-        <a>Niara Johnson</a>
-        <a>Thanh Pham</a>
-        <a>Zainab Ibrahim</a>
     </div>
     
 </body>
