Added "alt" and change "href" to "src"

--- a/about.html
+++ b/about.html
@@ -49,9 +49,9 @@
         <a>Henok Gebeyehu</a>
         <a>Henry Rosales</a>
         <a>LV Nereus</a>
-        <img class="Imagegroup1" id="HenokGebeyehu" href=""/>
-        <img class="Imagegroup1" id="HenryRosales" href="./assets/images/HenryRosales.png"/>
-        <img class="Imagegroup1" id="LVNereus" href="./assets/images/LVNereus.png"/>
+        <img class="Imagegroup1" id="HenokGebeyehu" src="" alt="Image of Henok Gebeyehu"/>
+        <img class="Imagegroup1" id="HenryRosales" src="./assets/images/HenryRosales.png" alt="Image of Henry Rosales" />
+        <img class="Imagegroup1" id="LVNereus" src="./assets/images/LVNereus.png" alt="Image of LV Nereus"/>
         
     </div>
 
@@ -59,9 +59,9 @@
         <a>Niara Johnson</a>
         <a>Thanh Pham</a>
         <a>Zainab Ibrahim</a>
-        <img class="Imagegroup2" id="NiaraJohnson" href="./assets/images/NiaraJohnson.png"/>
-        <img class="Imagegroup2" id="ThanhPham" href=""/>
-        <img class="Imagegroup2" id="ZainabIbrahim" href=""/>
+        <img class="Imagegroup2" id="NiaraJohnson" src="./assets/images/NiaraJohnson.png" alt="Image of Niara Johnson" />
+        <img class="Imagegroup2" id="ThanhPham" src="" alt="Image of Thanh Pham" />
+        <img class="Imagegroup2" id="ZainabIbrahim" src="" alt="Image of Zainab Ibrahim" />
     </div>
     
 </body>
