Update Simplist tagline spacing, edit button spacing
Updated spacing for button and Simplist logo + tagline

--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
       </nav>
 
         <!--Brand name & tagline-->
-        <h2>
-            Simplist
-        </h2>
-        <br>
-        <h4 class="tagline">
-            A better <u>todo</u> list
-        </h4>
+        <div class="brand-tag">
+            <h2>
+                Simplist
+            </h2>
+            <br>
+            <h4 class="tagline">
+                A better <u>todo</u> list
+            </h4>
+        </div>
 
         <!--Card-->
         <div class="card">
