--- a/about.html
+++ b/about.html
@@ -13,6 +13,8 @@
     <!--Emoji Link-->
     <script src="https://kit.fontawesome.com/27eb42d559.js" crossorigin="anonymous"></script>
 
+    <!-- Styling -->
+    <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 
     <title>Simplist | About</title>
@@ -20,13 +22,15 @@
 
 </head>
 <body>
+    <!-- Navbar -->
     <nav class="header">
-        <h1>Simplist</h1>
+        <h1><a href="index.html" id="logo">Simplist</a></h1>
         <ul>
-          <li><a href="#">App</a></li>
-          <li><a href="#">About</a></li>
+            <li><a href="app.html">App</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
-      </nav>
+    </nav>
+
     <main>
         <div class="header">
             <img class="Larrows" src="assets/images/Arrows.png">
