--- a/app.html
+++ b/app.html
@@ -16,6 +16,9 @@
       src="https://kit.fontawesome.com/439320a6ee.js"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Styling -->
+    <link href="assets/css/reset.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css" />
 
     <title>App</title>
@@ -23,14 +26,16 @@
   <body>
     <!-- Navbar -->
     <nav class="header">
-      <h1>Simplist</h1>
+      <h1><a href="index.html" id="logo">Simplist</a></h1>
       <ul>
-        <li><a href="#">App</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="app.html">App</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </nav>
+
     <!-- Main -->
     <main>
+
       <!-- Search box -->
       <section class="search-box">
         <div class="search-bar">
