--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-        <!-- Styling -->
-        <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Styling -->
+    <link href="assets/css/reset.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 
     <title>Simplist</title>
 </head>
 <body>
-    <h1> Test</h1>
     <!--Nav bar-->
     <nav class="header">
-        <h1>Simplist</h1>
+        <h1><a href="index.html" id="logo">Simplist</a></h1>
         <ul>
-          <li><a href="#">App</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="app.html">App</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
 
