--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h2>
                     Simplist
                 </h2>
-                <h3>A better <u>todo</u> list</h3>
+                <h3 class="hero-sub">A better <u>todo</u> list</h3>
             </div>
 
             <!--Card-->
@@ -47,8 +47,7 @@
             <!--Button-->
 
             <button onclick="" class="simplist-button">
-                Make things Simplier
-
+                Make things Simplier <img class="button-arrow" src="assets/images/dotted-arrow.png">
             </button>
         </section>
     </main>
