--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link href="assets/css/reset.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/439320a6ee.js" crossorigin="anonymous"></script>
 
     <title>Simplist</title>
 </head>
@@ -40,7 +42,40 @@
             <!--Card-->
             <div class="card">
                 
-                <img src="assets/images/Simplist.png">
+                <section class="intro hidden">
+                    <div class="container">
+                      <div class="details">
+                        <h4>Create your first item!</h4>
+                        <!-- <div class="steps"> -->
+                          <p>
+                              You're one step closer to making the <strong>simplist</strong> todo list you've ever
+                              made! First click the add icon below
+                          </p>
+                          <div class="checkbox-list">
+                            <div>
+                              <input type="checkbox" id="add-new" />
+                              <label for="add-new">Click on "Add new item"</label>
+                            </div>
+                            <div>
+                              <input type="checkbox" id="fill-form"/>
+                              <label for="fill-form">Fill out the information</label>
+                            </div>
+                            <div>
+                              <input type="checkbox" id="done" />
+                              <label for="done">Done</label>
+                            </div>
+                          </div>
+                        <!-- </div>  -->
+                      </div>
+                      <ul class="item-status">
+                        <li><input type="checkbox">Not Started</li>
+                        <li><i class="fa-solid fa-user"></i>You!</li>
+                      </ul>
+                    </div>
+                    <button class="calendar"><i class="fa-solid fa-calendar-days"></i>
+                    </button>
+                           
+                  </section>
 
             </div>
 
