--- a/app.html
+++ b/app.html
@@ -39,10 +39,10 @@
             type="search"
             id="item-search"
             name="item-search"
-            placeholder="Search..."
+            placeholder="search..."
           />
           <button type="submit" class="glass-icon">
-            <i class="fa fa-search"></i>
+            <i class="fa fa-search fa-xl"></i>
           </button>
         </div>
         <div class="tag-group">
@@ -58,7 +58,6 @@
         <div class="container">
           <div class="details">
             <h2>Create your first item!</h2>
-            <!-- <div class="steps"> -->
               <p>
                   You're one step closer to making the <strong>simplist</strong> todo list you've ever
                   made! First click the add icon below
@@ -77,14 +76,13 @@
                   <label for="done">Done</label>
                 </div>
               </div>
-            <!-- </div>  -->
           </div>
           <ul class="item-status">
             <li><input type="checkbox">Not Started</li>
             <li><i class="fa-solid fa-user"></i>You!</li>
           </ul>
         </div>
-        <button class="calendar"><i class="fa-solid fa-calendar-days"></i>
+        <button class="calendar"><i class="fa-solid fa-calendar-days fa-lg"></i>
         </button>
                
       </section>
@@ -107,7 +105,7 @@
                 id="description"
                 name="description"
                 placeholder="Description"
-              />
+                />
               </li>
               <li>
                 <label for="item-1" class="visually-hidden">Checklist item 1</label>
@@ -116,7 +114,7 @@
                 id="item-1"
                 name="item-1"
                 placeholder="Checklist item 1"
-              />
+                />
               </li>
               <li>
                 <label for="new-item" class="visually-hidden">Add another item</label>
@@ -125,7 +123,7 @@
                 id="new-item"
                 name="new-item"
                 placeholder="Add another item"
-              />
+                />
               </li>
             </ul>
             <ul class="right">
@@ -136,7 +134,9 @@
                 <input type="text" id="assign" name="assign" placeholder="Assign to..." />
               </li>
               <li>
-                <button class="due-date"><i class="fa-solid fa-calendar-days fa-lg"></i></button>
+                <i class="fa-solid fa-calendar-days fa-lg"></i>
+                <label for="" class="visually-hidden">Deadline</label>
+                <input type="date" name="deadline" id="deadline">
               </li>
             </ul>
           </div>
