--- a/app.html
+++ b/app.html
@@ -8,20 +8,16 @@
     <!-- Font for Darker Grotesque -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/439320a6ee.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/439320a6ee.js" crossorigin="anonymous"></script>
 
     <!-- Styling -->
     <link href="assets/css/reset.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link href="assets/css/style.css" rel="stylesheet">
 
-    <title>App</title>
+    <title>Simplist | App</title>
   </head>
   <body>
     <!-- Navbar -->
