--- a/about.html
+++ b/about.html
@@ -9,13 +9,14 @@
     <!--  Links for Grotesque Font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
     <!--Emoji Link-->
     <script src="https://kit.fontawesome.com/27eb42d559.js" crossorigin="anonymous"></script>
 
-    <link href="assets/css/about.css" rel="stylesheet">
+    <!-- Styles -->
+    <link href="assets/css/reset.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
 
     <title>Simplist | About</title>
 
@@ -27,10 +28,11 @@
     <nav class="header">
         <h1><a href="index.html" id="logo">Simplist</a></h1>
         <ul>
-            <li><a href="#">App</a></li>
-            <li><a href="#">About</a></li>
+          <li><a href="app.html">App</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
     </nav>
+
     <main>
         <div class="header">
             <img class="Larrows" src="assets/images/Arrows.png">
