--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Styling -->
     <link href="assets/css/reset.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="assets/css/style.css" rel="stylesheet">
 
     <!-- Font Awesome CDN -->
     <script src="https://kit.fontawesome.com/439320a6ee.js" crossorigin="anonymous"></script>
