Adjusted the margins of the paragraph page
Adjusted the margins

--- a/about.html
+++ b/about.html
@@ -24,9 +24,9 @@
 
 <body>
     <nav class="header">
-        <h1>Simplist</h1>
+        <h1 id="navBarLogo">Simplist</h1>
         <ul>
-            <li><a href="#">App</a></li>
+            <li><a href="./app.html">App</a></li>
             <li><a href="#">About</a></li>
         </ul>
     </nav>
@@ -38,7 +38,8 @@
         </div>
 
         <h3>An extension of your brain</h3>
-        <p>When our founders Henok Gebeyehu, Henry Rosales, LV Nereus, Niara Johnson, Thanh Pham, and Zainab Ibrahim,
+        
+        <p id="founderbio">When our founders Henok Gebeyehu, Henry Rosales, LV Nereus, Niara Johnson, Thanh Pham, and Zainab Ibrahim,
             began working on the
             idea that eventually became Simplist, they recognized four things the human brain needs to do on a regular
             basis: to get
@@ -49,7 +50,7 @@
     </main>
 
     <!--"Get Started for Free" Button-->
-    <button type="button">Get Started for Free</button>
+    <button type="button" class="button">Get Started for Free</button>
 
     <!--Portfolio Images (I need to add Thahn's image) Use FlexBox for spacing-->
     <div>
@@ -58,7 +59,7 @@
 
             <div class="column">
                 <a>Thanh Pham</a>
-                <img class="Imagegroup2" id="ThanhPham" src="" alt="Image of Thanh Pham" />
+                <img class="Imagegroup2" id="ThanhPham" src="./assets/images/Circle Images/Thanh.png" alt="Image of Thanh Pham" />
             </div>
 
             <div class="column">
