Updated the Title Images
Updated the Title Images

--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
     </nav>
     <main>
         <div class="header">
-            <img class="Larrows" src="assets/images/Arrows.png">
+            <img class="Larrows" src="assets/images/ArrowLeft.png">
             <h2>About Simplist</h2>
-            <img class="Rarrows" src="assets/images/Arrows.png">
+            <img class="Rarrows" src="assets/images/ArrowRight.png">
         </div>
 
         <h3>An extension of your brain</h3>
@@ -52,55 +52,53 @@
     <!--"Get Started for Free" Button-->
     <button type="button" class="button">Get Started for Free</button>
 
-    <!--Portfolio Images (I need to add Thahn's image) Use FlexBox for spacing-->
+    <!--Portfolio Images Use FlexBox for spacing-->
     <div>
 
         <div class="row">
 
             <div class="column">
-                <a>Thanh Pham</a>
-                <img class="Imagegroup2" id="ThanhPham" src="./assets/images/Circle Images/Thanh.png" alt="Image of Thanh Pham" />
+                <a class="NameTag1">Thanh Pham</a>
+                <img class="Imagegroup1" id="ThanhPham" src="./assets/images/Circle Images/Thanh.png" alt="Image of Thanh Pham" />
             </div>
 
             <div class="column">
-                <a>Henry Rosales</a>
+                <a class="NameTag1">Henry Rosales</a>
                 <img class="Imagegroup1" id="HenryRosales" src="./assets/images/Circle Images/Henry.png"
                     alt="Image of Henry Rosales" />
             </div>
 
             <div class="column">
-                <a>LV Nereus</a>
+                <a class="NameTag1">LV Nereus</a>
                 <img class="Imagegroup1" id="LVNereus" src="./assets/images/Circle Images/LV.png"
                     alt="Image of LV Nereus" />
             </div>
 
         </div>
 
-
-
         <div class="row">
 
             <div class="column">
-                <a>Niara Johnson</a>
+                <a class="NameTag2">Niara Johnson</a>
                 <img class="Imagegroup2" id="NiaraJohnson" src="./assets/images/Circle Images/Niara.png"
                     alt="Image of Niara Johnson" />
             </div>
 
             <div class="column">
-                <a>Henok Gebeyehu</a>
+                <a class="NameTag2">Henok Gebeyehu</a>
                 <img class="Imagegroup2" id="HenokGebeyehu" src="./assets/images/Circle Images/Henok.png"
                     alt="Image of Henok Gebeyehu" />
             </div>
 
             <div class="column">
-                <a>Zainab Ibrahim</a>
+                <a class="NameTag2">Zainab Ibrahim</a>
                 <img class="Imagegroup2" id="ZainabIbrahim" src="./assets/images/Circle Images/Zainab.png"
                     alt="Image of Zainab Ibrahim" />
             </div>
 
         </div>
     </div>
-    <script src=""></script>
+
 </body>
 
 </html>
