Stack Simplist and tagline
Ran into problems with underline and spacing conflict so just stacked text for cleaner look.

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 Simplist
             </h2>
             <br>
-            <h4 class="tagline">
-                A better <u>todo</u> list
-            </h4>
         </div>
+        <h4 class="tagline">
+            A better to-do list
+        </h4>
 
         <!--Card-->
         <div class="card">
