Updated the background image and worked on the nav bar and title
Updated the background image and worked on the nav bar and title

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
         </ul>
     </nav>
     <main>
-        <div class="header">
+        <div class="title">
             <img class="Larrows" src="assets/images/ArrowLeft.png">
             <h2>About Simplist</h2>
             <img class="Rarrows" src="assets/images/ArrowRight.png">
