Fixing the title and heading
Fixing the title and heading

--- a/about.html
+++ b/about.html
@@ -31,13 +31,13 @@
         </ul>
     </nav>
     <main>
-        <div class="title">
+        <div id="title">
             <img class="Larrows" src="assets/images/ArrowLeft.png">
             <h2>About Simplist</h2>
             <img class="Rarrows" src="assets/images/ArrowRight.png">
         </div>
 
-        <h3>An extension of your brain</h3>
+        <h3 id="h3">An extension of your brain</h3>
         
         <p id="founderbio">When our founders Henok Gebeyehu, Henry Rosales, LV Nereus, Niara Johnson, Thanh Pham, and Zainab Ibrahim,
             began working on the
