--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <!-- Styles -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/about.css" rel="stylesheet">
 
     <title>Simplist | About</title>
 
@@ -35,9 +36,9 @@
 
     <main>
         <div class="header">
-            <img class="Larrows" src="assets/images/Arrows.png">
+            <img class="arrows" src="assets/images/Arrows.png">
             <h2>About Simplist</h2>
-            <img class="Rarrows" src="assets/images/Arrows.png">
+            <img class="arrows flip" src="assets/images/Arrows.png">
         </div>
 
         <h3>An extension of your brain</h3>
