--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/about.css" rel="stylesheet">
 
+
     <title>Simplist | About</title>
 
 
@@ -41,16 +42,9 @@
             <img class="arrows flip" src="assets/images/Arrows.png">
         </div>
 
-        <h3>An extension of your brain</h3>
+        <h4>An extension of your brain</h4>
         
-        <p id="founderbio">When our founders Henok Gebeyehu, Henry Rosales, LV Nereus, Niara Johnson, Thanh Pham, and Zainab Ibrahim,
-            began working on the
-            idea that eventually became Simplist, they recognized four things the human brain needs to do on a regular
-            basis: to get
-            its life together, to have fun, to remember that thing its mother told it to do that one Saturday after the
-            family party,
-            and to create new ideas for the future. We hope you enjoy this app as much as we do! <i
-                class="fa-solid fa-face-smile-wink"></i></p>
+        <p id="founderbio">When our founders Henok Gebeyehu, Henry Rosales, LV Nereus, Niara Johnson, Thanh Pham, and Zainab Ibrahim, began working on the idea that eventually became Simplist, they recognized four things the human brain needs to do on a regular basis: to get its life together, to have fun, to remember that thing its mother told it to do that one Saturday after the family party, and to create new ideas for the future. We hope you enjoy this app as much as we do! <i class="fa-solid fa-face-smile-wink"></i></p>
     </main>
 
     <!--"Get Started for Free" Button-->
@@ -62,20 +56,18 @@
         <div class="row">
 
             <div class="column">
-                <a>Thanh Pham</a>
-                <img class="Imagegroup2" id="ThanhPham" src="./assets/images/Circle Images/Thanh.png" alt="Image of Thanh Pham" />
+                <a href="https://github.com/hnaht310" target="_blank">Thanh Pham</a>
+                <img class="Imagegroup" id="ThanhPham" src="./assets/images/Circle Images/Thanh.png" alt="Image of Thanh Pham" />
             </div>
 
             <div class="column">
-                <a>Henry Rosales</a>
-                <img class="Imagegroup1" id="HenryRosales" src="./assets/images/Circle Images/Henry.png"
-                    alt="Image of Henry Rosales" />
+                <a href="https://www.linkedin.com/in/henrmj/" target="_blank">Henry Rosales</a>
+                <img class="Imagegroup" id="HenryRosales" src="./assets/images/Circle Images/Henry.png" alt="Image of Henry Rosales" />
             </div>
 
             <div class="column">
-                <a>LV Nereus</a>
-                <img class="Imagegroup1" id="LVNereus" src="./assets/images/Circle Images/LV.png"
-                    alt="Image of LV Nereus" />
+                <a href="https://www.linkedin.com/in/lv-nereus/" target="_blank">LV Nereus</a>
+                <img class="Imagegroup" id="LVNereus" src="./assets/images/Circle Images/LV.png" alt="Image of LV Nereus" />
             </div>
 
         </div>
@@ -85,21 +77,18 @@
         <div class="row">
 
             <div class="column">
-                <a>Niara Johnson</a>
-                <img class="Imagegroup2" id="NiaraJohnson" src="./assets/images/Circle Images/Niara.png"
-                    alt="Image of Niara Johnson" />
+                <a href="https://www.linkedin.com/in/niarajohnson/" target="_blank">Niara Johnson</a>
+                <img class="Imagegroup" id="NiaraJohnson" src="./assets/images/Circle Images/Niara.png" alt="Image of Niara Johnson" />
             </div>
 
             <div class="column">
-                <a>Henok Gebeyehu</a>
-                <img class="Imagegroup2" id="HenokGebeyehu" src="./assets/images/Circle Images/Henok.png"
-                    alt="Image of Henok Gebeyehu" />
+                <a href="https://www.linkedin.com/in/henok-gebeyehu-9754372a/" target="_blank">Henok Gebeyehu</a>
+                <img class="Imagegroup" id="HenokGebeyehu" src="./assets/images/Circle Images/Henok.png" alt="Image of Henok Gebeyehu" />
             </div>
 
             <div class="column">
-                <a>Zainab Ibrahim</a>
-                <img class="Imagegroup2" id="ZainabIbrahim" src="./assets/images/Circle Images/Zainab.png"
-                    alt="Image of Zainab Ibrahim" />
+                <a href="https://www.linkedin.com/in/zainab-kumbassa-ibrahim-442201123/" target="_blank">Zainab Ibrahim</a>
+                <img class="Imagegroup" id="ZainabIbrahim" src="./assets/images/Circle Images/Zainab.png" alt="Image of Zainab Ibrahim" />
             </div>
 
         </div>
