--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
             <img class="arrows flip" src="assets/images/Arrows.png">
         </div>
 
-        <h4>An extension of your brain</h4>
+        <h4 class="negative-top">An extension of your brain</h4>
         
         <p id="founderbio">When our founders Henok Gebeyehu, Henry Rosales, LV Nereus, Niara Johnson, Thanh Pham, and Zainab Ibrahim, began working on the idea that eventually became Simplist, they recognized four things the human brain needs to do on a regular basis: to get its life together, to have fun, to remember that thing its mother told it to do that one Saturday after the family party, and to create new ideas for the future. We hope you enjoy this app as much as we do! <i class="fa-solid fa-face-smile-wink"></i></p>
     </main>
