--- a/about.html
+++ b/about.html
@@ -17,12 +17,8 @@
     <!-- Styles -->
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/about.css" rel="stylesheet">
-
 
     <title>Simplist | About</title>
-
-
 </head>
 
 <body>
@@ -48,9 +44,9 @@
     </main>
 
     <!--"Get Started for Free" Button-->
-    <button type="button" class="button">Get Started for Free</button>
+    <button type="button" class="started-btn"><h3>Get Started for Free</h3></button>
 
-    <!--Portfolio Images (I need to add Thahn's image) Use FlexBox for spacing-->
+    <!-- Portfolio Images -->
     <div>
 
         <div class="row">
