--- a/about.html
+++ b/about.html
@@ -26,8 +26,9 @@
     <nav class="header">
         <h1><a href="index.html" id="logo">Simplist</a></h1>
         <ul>
+          <li><a href="index.html">Home</a></li>
           <li><a href="app.html">App</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="#" id="active-page">About</a></li>
         </ul>
     </nav>
 
