--- a/app.html
+++ b/app.html
@@ -24,10 +24,11 @@
     <nav class="header">
       <h1><a href="index.html" id="logo">Simplist</a></h1>
       <ul>
-        <li><a href="app.html">App</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="#" id="active-page">App</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
-    </nav>
+  </nav>
 
     <!-- Main -->
     <main>
