--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <nav class="header">
         <h1><a href="index.html" id="logo">Simplist</a></h1>
         <ul>
+          <li><a href="#" id="active-page">Home</a></li>
           <li><a href="app.html">App</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
