--- a/app.html
+++ b/app.html
@@ -87,6 +87,7 @@
 
       <!-- Add new item button -->
       <button type="submit" class="add-item-btn">Add new item<i class="fa-solid fa-circle-plus fa-lg"></i></button>
+      <p class="errorFonts">Max. 170 characters</p>
 
       <!-- Create new item -->
       <section class="create-item hidden">
