Add changes for previous pull request
There were some changes in thanh's pull request that I needed to update in here. But the code was fine

--- a/app.html
+++ b/app.html
@@ -90,7 +90,7 @@
 
       <!-- Create new item -->
       <section class="create-item hidden">
-        <form action="">
+        <form action="" id="new-task-form">
           <div class="create-item-content">
             <ul class="left">
               <li>
