--- a/app.html
+++ b/app.html
@@ -17,6 +17,8 @@
     <link href="assets/css/reset.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
 
+    <script type="module" src="assets/js/index.js" defer></script>
+
     <title>Simplist | App</title>
   </head>
   <body>
