--- a/app.html
+++ b/app.html
@@ -58,7 +58,7 @@
       </section>
 
       <!-- Intro section -->
-      <section class="card hidden">
+      <section class="card">
         <div class="card-container">
           <div class="details">
             <h3>Create your first item!</h3>
@@ -88,10 +88,10 @@
       </section>
 
       <!-- Add new item button -->
-      <button type="submit" class="add-item-btn">Add new item<i class="fa-solid fa-circle-plus fa-lg"></i></button>
+      <button class="add-item-btn" id="new-item-btn">Add new item<i class="fa-solid fa-circle-plus fa-lg"></i></button>
 
       <!-- Create new item -->
-      <section class="create-item hidden">
+      <section class="create-item hidden" data-newform>
         <form action="" id="new-task-form">
           <div class="create-item-content">
             <ul class="left">
