--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         
         <!--Card-->
-        <section class="card hidden">
+        <section class="card">
           <img class="home-position arrows" src="assets/images/Arrows.png">
           <div class="card-container">
             <div class="details">
