--- a/app.html
+++ b/app.html
@@ -87,7 +87,9 @@
         <button class="calendar"><i class="fa-solid fa-calendar-days fa-lg"></i></button>
       </section>
 
-      <section id="tasks-list"></section>
+      <section id="tasks-list">
+        
+      </section>
 
       <!-- Add new item button -->
       <button class="add-item-btn" id="new-item-btn">Add new item<i class="fa-solid fa-circle-plus fa-lg"></i></button>
