Add button logic
I added logic to the buttons for the hovering over the date button. And for the buttons to send you to the app.html. Those were not hooked up for a while.

--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
     </main>
 
     <!--"Get Started for Free" Button-->
-    <button type="button" class="started-btn"><h3>Get Started for Free</h3></button>
+    <button type="button" onclick="location.href='app.html'" class="started-btn"><h3>Get Started for Free</h3></button>
 
     <!-- Portfolio Images -->
     <div>
