--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </section>      
       </section>
 
-      <button onclick="" class="simplist-button">
+      <button onclick="location.href='app.html'" class="simplist-button">
         <h3>Make things Simplier</h3> <img class="button-arrow" src="assets/images/dotted-arrow.png">
       </button>
 
